--- a/platformio.ini
+++ b/platformio.ini
@@ -18,5 +18,21 @@ monitor_filters =
     time
     esp32_exception_decoder
 
-upload_port = /dev/ttyUSB2
-monitor_port = /dev/ttyUSB2
+build_unflags =
+    -std=gnu++11
+
+build_flags =
+    -std=gnu++17
+
+upload_port = /dev/ttyUSB0
+monitor_port = /dev/ttyUSB0
+
+platform_packages =
+    toolchain-xtensa32@~2.80400.0
+    framework-arduinoespressif32 @ https://github.com/marcovannoord/arduino-esp32.git#idf-release/v4.2
+
+; bad dependencies resolving without this :-(
+lib_ldf_mode=deep
+
+lib_deps =
+    https://github.com/litvinov-tabor2022/esp32-portal-framework.git#0.2.1
