Synchronization mode, transactions
portal framework 0.5.0

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32dev]
-platform = espressif32
+platform = https://github.com/Jason2866/platform-espressif32.git
 board = esp32dev
 framework = arduino
 upload_speed = 921600
@@ -28,11 +28,10 @@ upload_port = /dev/ttyUSB0
 monitor_port = /dev/ttyUSB0
 
 platform_packages =
-    toolchain-xtensa32@~2.80400.0
-    framework-arduinoespressif32 @ https://github.com/marcovannoord/arduino-esp32.git#idf-release/v4.2
+    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#idf-release/v4.4
 
 ; bad dependencies resolving without this :-(
 lib_ldf_mode=deep
 
 lib_deps =
-    https://github.com/litvinov-tabor2022/esp32-portal-framework.git#0.4.0
+    https://github.com/litvinov-tabor2022/esp32-portal-framework.git#0.5.0
