--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32dev]
-platform = https://github.com/Jason2866/platform-espressif32.git
+platform = espressif32
 board = esp32dev
 framework = arduino
 upload_speed = 921600
@@ -34,4 +34,4 @@ platform_packages =
 lib_ldf_mode=deep
 
 lib_deps =
-    https://github.com/litvinov-tabor2022/esp32-portal-framework.git#0.5.0
+    https://github.com/litvinov-tabor2022/esp32-portal-framework.git#0.8.0
