--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ monitor_speed = 115200
 monitor_filters =
     time
     esp32_exception_decoder
+    log2file
 
 build_unflags =
     -std=gnu++11
