--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env]
 platform = espressif32
 board = esp32dev
 framework = arduino
@@ -36,3 +36,11 @@ lib_ldf_mode=deep
 
 lib_deps =
     https://github.com/litvinov-tabor2022/esp32-portal-framework.git#0.8.0
+
+[env:usb]
+upload_port = /dev/ttyUSB0
+monitor_port = /dev/ttyUSB0
+
+[env:ota]
+upload_protocol = custom
+upload_command = ./ota-upload.sh $SOURCE
